# Router-Service

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  azure-pipelines.yml  docker-compose.yml  pyproject.toml
src/router_service/: masstransit_consumer.py  route.json  router_service.py
src/router_service/helpers/: custom_nearest_edge.py  helpers.py  price_helpers.py  route_formatter.py  time.py
src/router_service/library_overrides/: RabbitMQSender.py
src/router_service/models/: message_envelope.py  price_model.py  route_models.py  vehicle.py
src/router_service/services/: calculator.py  data_fetcher.py  generate_and_pickle.py  message_encoder.py  pricer.py  receiver.py  route_handler.py  sender.py
