[tool.poetry]
name = "router-service"
version = "0.1.0"
description = ""
authors = ["David Hellinga <d.hellinga@student.fontys.nl>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pyenchant = "^3.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"
yamllint = "^1.30.0"
pylint = "^2.17.1"
flake8-pyproject = "^1.2.3"
flake8-import-order = "^0.18.2"
flake8-blind-except = "^0.2.1"
flake8-comprehensions = "^3.11.1"
flake8-docstrings = "^1.7.0"
flake8-print = "^5.0.0"
flake8-pytest = "^1.4"
flake8-isort = "^6.0.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
